<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.crown.library.onspotlibrary.views.OSProfileItem
        android:id="@+id/contact_us_opi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_round_contact_support_24"
        app:title="@string/title_contact_us" />

    <com.crown.library.onspotlibrary.views.OSProfileItem
        android:id="@+id/share_opi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_baseline_share_24"
        app:title="@string/title_share" />

    <com.crown.library.onspotlibrary.views.OSProfileItem
        android:id="@+id/rate_this_app_opi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_round_favorite_24"
        app:title="@string/title_rate_app" />

    <com.crown.library.onspotlibrary.views.OSProfileItem
        android:id="@+id/logout_opi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@android:drawable/ic_lock_power_off"
        app:title="@string/title_logout" />
</LinearLayout>