<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/header_verify_phone_no"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View style="@style/GrayVerticalDivider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/msg_phone_verification" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/send_otp_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:cardBackgroundColor="@color/grey_5"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="+91 - "
                        android:textSize="18sp"
                        tools:ignore="HardcodedText" />

                    <View
                        android:layout_width="16dp"
                        android:layout_height="0dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/otp_til"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_phone_number"
                        app:counterEnabled="true"
                        app:counterMaxLength="10">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phone_no_tiet"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="@string/digits_number_positive"
                            android:inputType="number"
                            android:maxLength="10"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/send_otp_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@drawable/style_btn_rounded"
                    android:gravity="center"
                    android:text="@string/action_btn_send_otp"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/verify_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:visibility="gone"
            app:cardBackgroundColor="@color/grey_5"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_hint_enter_otp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/darker_gray" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/verify_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_hint_otp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/otp_tiet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/digits_number_positive"
                        android:inputType="number"
                        android:maxLength="10"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/verify_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/style_btn_rounded"
                    android:gravity="center"
                    android:text="@string/action_btn_verify"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
